2012-03-30  Jeff Johnston  <jjohnstn@redhat.com>

	Bug #371277
	* src/org/eclipse/cdt/internal/autotools/core/AutotoolsNewMakeGenerator.java
	(regenerateMakefiles): Fix setting of status on error.
	(runScript): Switch to use sh -c for all script execution.

2012-03-30  Jeff Johnston  <jjohnstn@redhat.com>

	Bug #372557
	* src/org/eclipse/cdt/internal/autotools/core/AutotoolsNewMakeGenerator.java
	(runScript): Fix index out of range exception when environment variable is
	unknown.
	
2012-03-29  Jeff Johnston  <jjohnstn@redhat.com>

	* src/org/eclipse/cdt/autotools/core/AutotoolsNewProjectNature.java: Fix old nature id to contain the .core specifier.

2012-01-03  Jeff Johnston  <jjohnstn@redhat.com>

	Refactor all packages to be org.eclipse.cdt.autotools.core.

2011-12-16  Jeff Johnston  <jjohnstn@redhat.com>

	* src/org/eclipse/linuxtools/internal/cdt/autotools/core/AutotoolsPropertyConstants.java (fACVersions): Add
	2.68.
	(fAMVersions): Add 1.11.1.

2011-10-19  Jeff Johnston  <jjohnstn@redhat.com>

	Bug #361461
	* src/org/eclipse/linuxtools/internal/cdt/autotools/core/AutotoolsNewMakeGenerator.java (regenerateMakefiles): Fix autogen.sh
	case whereby autogen.sh doesn't run or create configure script.

2011-10-03  Jeff Johnston  <jjohnstn@redhat.com>

	* src/org/eclipse/linuxtools/internal/cdt/autotools/core/configure/FlagConfigureOption.java (getParameter): Remote
	extraneous space at beginning of CFLAGS constructed string.
	* src/org/eclipse/linuxtools/internal/cdt/autotools/core/configure/ConfigureMessages.properties: Fix tips for
	various CFLAGS settings.

2011-10-03  Jeff Johnston  <jjohnstn@redhat.com>

	* src/org/eclipse/linuxtools/internal/cdt/autotools/core/configure/AbstractConfigurationOption.java (isFlag): New method.
	(isFlagValue): Ditto.
	* src/org/eclipse/linuxtools/internal/cdt/autotools/core/configure/AutotoolsConfigurationManager.java (getSavedConfigs): Add
	support for flags and flag values.
	(saveConfigs): Ditto.